--- a/tmux.config
+++ b/tmux.config
@@ -2,11 +2,9 @@ unbind C-b
 set -g prefix `
 bind-key ` send-prefix
 
-bind r source-file ~/.dotfiles/tmux.config \; display "Reloaded!"
-
-set -g default-terminal "xterm-256color"
-set -g terminal-overrides 'xterm:colors=88'
-set -g default-command "reattach-to-user-namespace -l ${SHELL}"
+# set -g default-terminal "xterm-256color"
+# set -g terminal-overrides 'xterm:colors=88'
+# set -g default-command "reattach-to-user-namespace -l ${SHELL}"
 
 #so we have more of history
 set -g history-limit 30000
@@ -17,21 +15,22 @@ set-window-option -g mode-keys vi
 
 #vi-style copying to system clipboard
 setw -g mode-keys vi
-bind-key -t vi-copy v begin-selection
-bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+#bind-key -t vi-copy v begin-selection
+#bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
 
-unbind -t vi-copy Enter
-bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+#unbind -t vi-copy Enter
+#bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
 
-#run-shell ~/Documents/projects/tmux-pain-control/pain_control.tmux
+run-shell ~/Documents/projects/tmux-pain-control/pain_control.tmux
 
 #status bar stuff
 set-option -g status on                # turn the status bar on
+# set -g status-utf8 on                  # set utf-8 for the status bar
 set -g status-interval 5               # set update frequencey (default 15 seconds)
 set -g status-justify centre           # center window list for clarity
 
 # set color for status bar/window bar
-set -g status-bg "#000000"
+set -g status-bg "#111111"
 
 setw -g window-status-fg white
 setw -g window-status-bg "#000000"
@@ -55,7 +54,7 @@ set -g status-right "#[fg=#bbeeaa]%B %d, %I:%M %p · 🦁 "
 set -g pane-active-border-fg "#bbeeaa"
 
 # for non-active panes
-# set -g pane-border-style-fg "#26A6D1"
+set -g pane-border-style-fg "#26A6D1"
 
 # resizing panes
 bind-key -n S-Up resize-pane -U 5
@@ -71,8 +70,8 @@ bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
 bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
 
 # pane keybinds
-bind v split-window -v
-bind h split-window -h
+bind-key -n C-\ split-window -h
+bind-key -n C-_ split-window -v
 bind-key -n C-x kill-pane
 
 # window keybinds
