Fix tmux bugs, always center vim, no autoload npm/tmux

--- a/tmux.conf
+++ b/tmux.conf
@@ -54,7 +54,7 @@ set -g status-right "#[fg=#bbeeaa]%B %d, %I:%M %p · 🦁 "
 set -g pane-active-border-fg "#bbeeaa"
 
 # for non-active panes
-set -g pane-border-style-fg "#26A6D1"
+# set -g pane-border-style-fg "#26A6D1"
 
 # resizing panes
 bind-key -n S-Up resize-pane -U 5
