--- a/tmux.conf
+++ b/tmux.conf
@@ -46,7 +46,7 @@ set -g status-left ""
 set-option -g status-justify left
 
 # right status
-set -g status-right "#[fg=#bbeeaa]%B %d, %I:%M %p · 🦁 "
+set -g status-right "#[fg=#bbeeaa]%B %d, %I:%M %p"
 
 
 # color for panes
