--- a/tmux.conf
+++ b/tmux.conf
@@ -23,6 +23,10 @@ setw -g mode-keys vi
 
 run-shell ~/Documents/projects/tmux-pain-control/pain_control.tmux
 
+# base index for panes and windows
+set -g base-index 1
+setw -g pane-base-index 1
+
 #status bar stuff
 set-option -g status on                # turn the status bar on
 # set -g status-utf8 on                  # set utf-8 for the status bar
@@ -48,7 +52,6 @@ set-option -g status-justify left
 # right status
 set -g status-right "#[fg=#bbeeaa]%B %d, %I:%M %p"
 
-
 # color for panes
 # for active panes
 set -g pane-active-border-fg "#bbeeaa"
@@ -56,17 +59,16 @@ set -g pane-active-border-fg "#bbeeaa"
 # for non-active panes
 # set -g pane-border-style-fg "#26A6D1"
 
-# resizing panes
-bind-key -n S-Up resize-pane -U 5
-bind-key -n S-Down resize-pane -D 5
-bind-key -n S-Left resize-pane -L 5
-bind-key -n S-Right resize-pane -R 5
+# smart pane switching and resizing with awareness of vim splits
+bind -n S-Up resize-pane -U 5
+bind -n S-Down resize-pane -D 5
+bind -n S-Left resize-pane -L 5
+bind -n S-Right resize-pane -R 5
 
-# smart pane switching with awareness of vim splits
 is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?x?)(diff)?$"'
-bind -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
-bind -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
 bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
+bind -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
+bind -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
 bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
 
 # pane keybinds
