--- a/tmux.conf
+++ b/tmux.conf
@@ -18,6 +18,9 @@ setw -g mode-keys vi
 #bind-key -t vi-copy v begin-selection
 #bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
 
+# toggle mouse mode
+bind m set -g mouse
+
 #unbind -t vi-copy Enter
 #bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
 
@@ -30,7 +33,7 @@ setw -g pane-base-index 1
 #status bar stuff
 set-option -g status on                # turn the status bar on
 # set -g status-utf8 on                  # set utf-8 for the status bar
-set -g status-interval 5               # set update frequencey (default 15 seconds)
+set -g status-interval 5               # set update frequency (default 15 seconds)
 set -g status-justify centre           # center window list for clarity
 
 # set color for status bar/window bar
@@ -50,7 +53,8 @@ set -g status-left ""
 set-option -g status-justify left
 
 # right status
-set -g status-right "#[fg=#bbeeaa]%B %d, %I:%M %p"
+set -g status-right-length 55
+set -g status-right "#[fg=#bbeeaa]%B %d, %I:%M %p │ UTC #(date +"%T") │ #(date +%s)"
 
 # color for panes
 # for active panes
