--- a/tmux.conf
+++ b/tmux.conf
@@ -54,7 +54,7 @@ set-option -g status-justify left
 
 # right status
 set -g status-right-length 55
-set -g status-right "#[fg=#bbeeaa]%B %d, %I:%M %p │ UTC #(date -u +"%T") │ #(date +%s)"
+set -g status-right "#[fg=#bbeeaa]%B %d, %I:%M %p | UTC #(date -u +"%T") | #(date +%s)"
 
 # color for panes
 # for active panes
