--- a/tmux.conf
+++ b/tmux.conf
@@ -2,7 +2,7 @@ unbind C-b
 set -g prefix `
 bind-key ` send-prefix
 
-# set -g default-terminal "xterm-256color"
+set -g default-terminal "xterm-256color"
 # set -g terminal-overrides 'xterm:colors=88'
 # set -g default-command "reattach-to-user-namespace -l ${SHELL}"
 
@@ -39,11 +39,13 @@ set -g status-justify centre           # center window list for clarity
 # set color for status bar/window bar
 set -g status-bg "#111111"
 
-setw -g window-status-fg white
-setw -g window-status-bg "#000000"
+# setw -g window-status-fg white
+# setw -g window-status-bg "#000000"
+setw -g window-status-style fg=white,bg=black
 
-setw -g window-status-current-fg "#000000"
-setw -g window-status-current-bg "#bbeeaa"
+# setw -g window-status-current-fg "#000000"
+# setw -g window-status-current-bg "#bbeeaa"
+setw -g window-status-current-style fg=black,bg="#bbeeaa"
 setw -g window-status-format "#[fg=#8ac378]#[bg=#555555] #I #[bg=#333333]#[fg=#8ac378] #W "
 setw -g window-status-current-format "#[fg=#bbeeaa]#[bg=#555555] #I #[bg=#333333]#[fg=#bbeeaa] #W "
 set -g window-status-separator " "
@@ -58,7 +60,8 @@ set -g status-right "#[fg=#bbeeaa]%B %d, %I:%M %p | UTC #(date -u +"%T") | #(dat
 
 # color for panes
 # for active panes
-set -g pane-active-border-fg "#bbeeaa"
+# set -g pane-active-border-fg "#bbeeaa"
+set -g pane-active-border-style fg="#bbeeaa"
 
 # for non-active panes
 # set -g pane-border-style-fg "#26A6D1"
