Clean up and comment tmux conf

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,70 +1,78 @@
 unbind C-b
+
+# Use backtick as prefix key
 set -g prefix `
 bind-key ` send-prefix
 
+# 0 delay on prefix
+set -sg escape-time 0
+
 set -g default-terminal "xterm-256color"
-# set -g terminal-overrides 'xterm:colors=88'
+set -g terminal-overrides 'xterm:colors=88'
+# See http://www.economyofeffort.com/2013/07/29/reattach-to-user-namespace-the-fix-for-your-tmux-in-os-x-woes/
 # set -g default-command "reattach-to-user-namespace -l ${SHELL}"
 
-#so we have more of history
+# so we have more of history
 set -g history-limit 30000
 
-#vi keybindings
+################################ Vi keybindings ################################
+
+# vi keybindings
 set-option -g status-keys vi
 set-window-option -g mode-keys vi
-
-#vi-style copying to system clipboard
 setw -g mode-keys vi
-#bind-key -t vi-copy v begin-selection
-#bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
 
-# toggle mouse mode
-bind m set -g mouse
+# vi-style copying to clipboard
+# use v to enter "visual" mode and highlight
+# use y to copy ("yank")
+# copies to tmux clipboard and pbcopy (mac clipboard)
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel\; run "tmux save -|pbcopy"
 
-#unbind -t vi-copy Enter
-#bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+# also use Enter key to copy
+# unbind -T copy-mode-vi Enter
+# bind-key -T copy-mode-vi Enter send-keys -X copy-selection-and-cancel\; run "tmux save -|pbcopy"
 
-run-shell ~/Documents/projects/tmux-pain-control/pain_control.tmux
+################################## Status bar ##################################
 
-# base index for panes and windows
-set -g base-index 1
-setw -g pane-base-index 1
+# enable status bar
+set-option -g status on
+set-option -g status-position top
 
-#status bar stuff
-set-option -g status on                # turn the status bar on
-# set -g status-utf8 on                  # set utf-8 for the status bar
-set -g status-interval 5               # set update frequency (default 15 seconds)
-set -g status-justify centre           # center window list for clarity
+# update frequency in s, default is 15s
+set -g status-interval 5
 
-# set color for status bar/window bar
+# bg color of status bar
 set -g status-bg "#111111"
-
-# setw -g window-status-fg white
-# setw -g window-status-bg "#000000"
-setw -g window-status-style fg=white,bg=black
-
-# setw -g window-status-current-fg "#000000"
-# setw -g window-status-current-bg "#bbeeaa"
-setw -g window-status-current-style fg=black,bg="#bbeeaa"
-setw -g window-status-format "#[fg=#8ac378]#[bg=#555555] #I #[bg=#333333]#[fg=#8ac378] #W "
-setw -g window-status-current-format "#[fg=#bbeeaa]#[bg=#555555] #I #[bg=#333333]#[fg=#bbeeaa] #W "
-set -g window-status-separator " "
 
 # left status
 set -g status-left ""
 set-option -g status-justify left
 
-# right status
-set -g status-right-length 55
-set -g status-right "#[fg=#bbeeaa]%B %d, %I:%M %p | UTC #(date -u +"%T") | #(date +%s)"
+# right status max length
+set -g status-right-length 40
+# right status shows local time + date and unix epoch
+set -g status-right "#[fg=#bbeeaa]%B %d, %I:%M %p | #(date +%s)"
+# old status - was supposed to include UTC time, but it just shows local time
+# for some reason
+# set -g status-right "#[fg=#bbeeaa]%B %d, %I:%M %p | UTC #(date -u +"%T") | #(date +%s)"
 
-# color for panes
-# for active panes
-# set -g pane-active-border-fg "#bbeeaa"
+# styles for window status (left status bar)
+setw -g window-status-style fg=white,bg=black
+setw -g window-status-current-style fg=black,bg="#bbeeaa"
+setw -g window-status-format "#[fg=#8ac378]#[bg=#555555] #I #[bg=#333333]#[fg=#8ac378] #W "
+setw -g window-status-current-format "#[fg=#bbeeaa]#[bg=#555555] #I #[bg=#333333]#[fg=#bbeeaa] #W "
+set -g window-status-separator " "
+
+################################# Pane control #################################
+
+run-shell ~/Documents/projects/tmux-pain-control/pain_control.tmux
+
+# color for active panes
 set -g pane-active-border-style fg="#bbeeaa"
 
-# for non-active panes
-# set -g pane-border-style-fg "#26A6D1"
+# color for non-active panes
+set -g pane-border-style fg="#26A6D1"
 
 # smart pane switching and resizing with awareness of vim splits
 bind -n S-Up resize-pane -U 5
@@ -79,20 +87,17 @@ bind -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
 bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
 
 # pane keybinds
-bind-key -n C-\ split-window -h
+bind-key -n 'C-\' split-window -h
 bind-key -n C-_ split-window -v
 bind-key -n C-x kill-pane
 
-# window keybinds
-bind-key -n C-t new-window
-bind-key -n C-y command-prompt 'rename-window %%'
-bind-key -n C-] next-window
-bind-key -n C-[ previous-window
+##################################### Misc #####################################
 
-#######################################################################################
-#                                        PLUGINS
-#######################################################################################
+# toggle mouse mode
+bind m set -g mouse
 
-set-option -g status-position top
+# base index for panes and windows
+set -g base-index 1
+setw -g pane-base-index 1
 
 unbind-key -n Escape
